fix: cleanup label Endpoints
