# api_contract/openapi.json
@@ -207,29 +207,6 @@
         "title": "LabelProposalResponse",
         "type": "object"
       },
-      "LabeledSample": {
-        "properties": {
-          "category": {
-            "title": "Category",
-            "type": "string"
-          },
-          "label": {
-            "title": "Label",
-            "type": "string"
-          },
-          "uuid": {
-            "title": "Uuid",
-            "type": "string"
-          }
-        },
-        "required": [
-          "uuid",
-          "label",
-          "category"
-        ],
-        "title": "LabeledSample",
-        "type": "object"
-      },
       "ValidationError": {
         "properties": {
           "ctx": {
@@ -472,29 +449,6 @@
       }
     },
     "/api/v1/sounds/labeled-samples": {
-      "get": {
-        "operationId": "get_labeled_samples_api_v1_sounds_labeled_samples_get",
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "items": {
-                    "$ref": "#/components/schemas/LabeledSample"
-                  },
-                  "title": "Response Get Labeled Samples Api V1 Sounds Labeled Samples Get",
-                  "type": "array"
-                }
-              }
-            },
-            "description": "Successful Response"
-          }
-        },
-        "summary": "Get Labeled Samples",
-        "tags": [
-          "sounds"
-        ]
-      },
       "post": {
         "operationId": "create_labeled_sample_api_v1_sounds_labeled_samples_post",
         "requestBody": {
@@ -532,48 +486,6 @@
         "summary": "Create Labeled Sample",
         "tags": [
           "labeling"
-        ]
-      }
-    },
-    "/api/v1/sounds/labeled-samples/{uuid}": {
-      "get": {
-        "operationId": "get_labeled_sample_by_uuid_api_v1_sounds_labeled_samples__uuid__get",
-        "parameters": [
-          {
-            "in": "path",
-            "name": "uuid",
-            "required": true,
-            "schema": {
-              "title": "Uuid",
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/LabeledSample"
-                }
-              }
-            },
-            "description": "Successful Response"
-          },
-          "422": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HTTPValidationError"
-                }
-              }
-            },
-            "description": "Validation Error"
-          }
-        },
-        "summary": "Get Labeled Sample By Uuid",
-        "tags": [
-          "sounds"
         ]
       }
     },
